[package]
name = "dsf-rpc"
version = "0.1.0"
authors = ["ryan <ryan@kurte.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "*"
humantime = "*"
futures = "*"
actix = "*"
rand = "*"
colored = "*"
chrono-humanize = "*"

[dependencies.dsf-core]
features = ["serde"]
path = "../dsf-core"

[dependencies.chrono]
features = ["serde"]
version = "0.4.6"

[dependencies.serde]
features = ["derive"]
version = "1.0"

