[package]
name = "dsf-rpc"
version = "0.1.0"
authors = ["ryan <ryan@kurte.nz>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.5"
humantime = "1.3.0"
futures = "0.3.1"
actix = "0.8.3"
rand = "0.7.2"
colored = "1.9.0"
chrono-humanize = "0.0.11"

[dependencies.dsf-core]
version = "0.1.0"
features = ["serde"]

[dependencies.chrono]
version = "0.4.10"
features = ["serde"]


[dependencies.serde]
features = ["derive"]
version = "1.0"

