[package]
name = "dsf-rpc"
description = "DSF RPC object/message definitions"
authors = ["ryan <ryan@kurte.nz>"]
repository = "https://github.com/dist-svc/dsf-rpc"
license = "MPL-2.0"
keywords = [ "DSF" ]
version = "0.1.0"
edition = "2018"

[features]
default = [ "diesel" ]

[dependencies]
structopt = "0.3.5"
humantime = "1.3.0"
futures = "0.3.1"
async-trait = "0.1.21"

rand = "0.7.2"
colored = "1.9.0"
chrono-humanize = "0.0.11"
chrono-english = "0.1.4"

diesel = { version = "1.4.3", optional = true}
strum = "0.17.1"
strum_macros = "0.17.1"

[dependencies.dsf-core]
version = "0.1.0"
features = ["serde"]

[dependencies.chrono]
version = "0.4.10"
features = ["serde"]

[dependencies.serde]
features = ["derive"]
version = "1.0"

